--- a/views/userViews/cart.hbs
+++ b/views/userViews/cart.hbs
@@ -1,12 +1,11 @@
 {{> userHeader}}
 
-
   <div class="container main-container headerOffset">
     <div class="row">
       <div class="breadcrumbDiv col-lg-12">
         <ul class="breadcrumb">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="category.html">Category</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/shop">Category</a></li>
           <li class="active">Cart</li>
         </ul>
       </div>
@@ -19,7 +18,7 @@
         </h1>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-5 rightSidebar col-xs-6 col-xxs-12 text-center-xs">
-        <h4 class="caps"><a href="category.html"><i class="fa fa-chevron-left"></i> Back to shopping </a></h4>
+        <h4 class="caps"><a href="/shop"><i class="fa fa-chevron-left"></i> Back to shopping </a></h4>
       </div>
     </div>
     <!--/.row-->
