--- a/views/adminViews/productManagement.hbs
+++ b/views/adminViews/productManagement.hbs
@@ -133,7 +133,7 @@
                                     required>
                             </div>
                             <div class="input-group mb-3">
-                                <input name="productStock" type="tel" class="form-control" min="0" placeholder="Product Stock"
+                                <input name="productStock" type="tel" class="form-control" min=0 placeholder="Product Stock"
                                     required>
                             </div>
                         </div>
