--- a/views/partials/userHeader.hbs
+++ b/views/partials/userHeader.hbs
@@ -379,18 +379,18 @@
         </a>
 
         <!-- this part for mobile -->
-        <div class="search-box pull-right hidden-lg hidden-md hidden-sm">
+        {{!-- <div class="search-box pull-right hidden-lg hidden-md hidden-sm">
           <div class="input-group">
             <button class="btn btn-nobg getFullSearch" type="button">
               <i class="fa fa-search"> </i>
             </button>
           </div>
           <!-- /input-group -->
-        </div>
+        </div>  --}}
       </div>
 
       <!-- this part is duplicate from cartMenu  keep it for mobile -->
-      {{#if currentUser}}
+      {{#if cartData}}
       <div class="navbar-cart collapse">
         <div class="cartMenu col-lg-4 col-xs-12 col-md-4">
           <div class="w100 miniCartTable scroll-pane">
@@ -398,7 +398,7 @@
               <tbody>
                 {{#each cartData}}
                 <tr class="miniCartProduct">
-                  <td style="width: 20%" class="miniCartProductThumb">
+                  <td style="width: 30%" class="miniCartProductThumb">
                     <div>
                       <a href="/product-details.html">
                         <img src="images/productImages/{{this.productId.productImage1}}" alt="img" />
@@ -413,13 +413,13 @@
                       <div class="price"><span> ₹{{this.productId.productPrice}} </span></div>
                     </div>
                   </td>
-                  <td style="width: 10%" class="miniCartQuantity">
+                  <td style="width: 15%" class="miniCartQuantity">
                     <a> X {{this.productId.productQuantity}} </a>
                   </td>
                   <td style="width: 15%" class="miniCartSubtotal">
                     <span> ₹{{this.productId.totalCostPerProduct}} </span>
                   </td>
-                  <td style="width: 5%" class="delete"><a> x </a></td>
+                  {{!-- <td style="width: 5%" class="delete"><a> x </a></td> --}}
                 </tr>
                 {{/each}}
               </tbody>
@@ -461,7 +461,7 @@
                   <tbody>
                     {{#each cartData}}
                     <tr class="miniCartProduct">
-                      <td style="width: 20%" class="miniCartProductThumb">
+                      <td style="width: 30%" class="miniCartProductThumb">
                         <div>
                           <a href="product-details.html">
                             <img src="images/productImages/{{this.productId.productImage1}}" alt="img" />
@@ -478,13 +478,13 @@
                           <div class="price"><span> ₹{{this.productId.productPrice}} </span></div>
                         </div>
                       </td>
-                      <td style="width: 10%" class="miniCartQuantity">
+                      <td style="width: 15%" class="miniCartQuantity">
                         <a> X {{this.productQuantity}} </a>
                       </td>
                       <td style="width: 15%" class="miniCartSubtotal">
                         <span> ₹{{this.totalCostPerProduct}} </span>
                       </td>
-                      <td style="width: 5%" class="delete"><a> x </a></td>
+                      {{!-- <td style="width: 5%" class="delete"><a> x </a></td> --}}
                     </tr>
                     {{/each}}
                   </tbody>
@@ -505,14 +505,14 @@
           </div>
           <!--/.cartMenu-->
 
-          <div class="search-box">
+          {{!-- <div class="search-box">
             <div class="input-group">
               <button class="btn btn-nobg getFullSearch" type="button">
                 <i class="fa fa-search"> </i>
               </button>
             </div>
             <!-- /input-group -->
-          </div>
+          </div> --}}
           <!--/.search-box -->
         </div>
         <!--/.navbar-nav hidden-xs-->
@@ -522,7 +522,7 @@
     </div>
     <!--/.container -->
 
-    <div class="search-full text-right">
+    {{!-- <div class="search-full text-right">
       <a class="pull-right search-close">
         <i class="fa fa-times-circle"> </i>
       </a>
@@ -534,7 +534,7 @@
           <i class="fa fa-search"> </i>
         </button>
       </div>
-    </div>
+    </div> --}}
     <!--/.search-full-->
   </div>
   <!-- /.Fixed navbar  -->
