--- a/views/adminViews/productManagement.hbs
+++ b/views/adminViews/productManagement.hbs
@@ -270,7 +270,7 @@
                                     value="{{this.productPrice}}">
                             </div>
                             <div class="input-group mb-3">
-                                <input name="productStock" type="text" class="form-control"
+                                <input name="productStock" type="text" class="form-control" min="0"
                                     value="{{this.productStock}}">
                             </div>
                         </div>
