few unimportant changes

--- a/views/userViews/account.hbs
+++ b/views/userViews/account.hbs
@@ -551,7 +551,7 @@
 
         <div class="col-lg-3 col-md-3 col-sm-5">
             <h1>Referral code:</h1>
-            <input type="text" value="/signupLoginPage?referralCode={{userData.referralCode}}" id="copyText" disabled>
+            <input type="text" value="www.lfkart.shop/signupLoginPage?referralCode={{userData.referralCode}}" id="copyText" disabled>
             <button id="copyReferralCode">Copy</button>
         </div>
         <div class="col-lg-3 col-md-3 col-sm-5">
