--- a/views/userViews/changePassword.hbs
+++ b/views/userViews/changePassword.hbs
@@ -1,149 +1,161 @@
 {{> userHeader}}
 
-  <div class="container main-container headerOffset">
+<div class="container main-container headerOffset">
 
-    <div class="row">
-      <div class="breadcrumbDiv col-lg-12">
-        <ul class="breadcrumb">
-          <li><a href="index.html">Home</a></li>
-          <li class="active"> Authentication</li>
-        </ul>
-      </div>
+  <div class="row">
+    <div class="breadcrumbDiv col-lg-12">
+      <ul class="breadcrumb">
+        <li><a href="index.html">Home</a></li>
+        <li class="active"> Authentication</li>
+      </ul>
     </div>
+  </div>
 
-    <div class="row">
+  <div class="row">
+
+    <div class="col-lg-9 col-md-9 col-sm-7">
+
 
       <div class="col-lg-9 col-md-9 col-sm-7">
+        <h1 class="section-title-inner"><span><i class="glyphicon glyphicon-user"></i> Change your password</span>
+        </h1>
 
+        <div class="row userInfo">
 
-        <div class="col-lg-9 col-md-9 col-sm-7">
-          <h1 class="section-title-inner"><span><i class="glyphicon glyphicon-user"></i> Change your password</span>
-          </h1>
+          <div class="col-xs-12 col-sm-6">
+            <h2 class="block-title-2"> Please be enter new password, if it has to be changed. </h2>
 
-          <div class="row userInfo">
-
-            <div class="col-xs-12 col-sm-6">
-              <h2 class="block-title-2"> Please be enter new password, if it has to be changed. </h2>
-
-              <form id="passwordChangeForm" role="form" class="regForm">
-                <div class="form-group">
-                  <label>New Password</label>
-                  <input required id="password" minlength="5" maxlength="12"
-                    title="Please enter your new password, between 5 and 12 characters" type="tel" class="form-control"
-                    placeholder="Password" onkeyup="checkPasswordStrength();">
-                </div>
-                <div id="password-strength-status"></div>
-                <div class="form-group">
-                  <label>Confirm New Password</label>
-                  <input required minlength="5" title="Passwords doesn't match" id="confirmPass" type="password"
-                    class="form-control" placeholder="Confirm Password" name="confirmPassword"
-                    data-rule-equalTo="#password">
-                </div>
-                <div class="form-group">
-                  <label>Current Password</label>
-                  <input name="currentPassword" type="password" class="form-control"
-                    placeholder="Enter your current password" required minlength="8" maxlength="16">
-                </div>
-                <button id="verifyOTP" type="submit" class="btn btn-primary"> Change Password
-                </button>
-              </form>
-            </div>
+            <form id="passwordChangeForm" role="form" class="regForm">
+              <div class="form-group">
+                <label>New Password</label>
+                <input required id="password" minlength="5" maxlength="12"
+                  title="Please enter your new password, between 5 and 12 characters" type="tel" class="form-control"
+                  placeholder="Password" onkeyup="checkPasswordStrength();">
+              </div>
+              <div id="password-strength-status"></div>
+              <div class="form-group">
+                <label>Confirm New Password</label>
+                <input required minlength="5" title="Passwords doesn't match" id="confirmPass" type="password"
+                  class="form-control" placeholder="Confirm Password" name="confirmPassword"
+                  data-rule-equalTo="#password">
+              </div>
+              <div class="form-group">
+                <label>Current Password</label>
+                <input name="currentPassword" type="password" class="form-control" id="currentPassword"
+                  placeholder="Enter your current password" required minlength="8" maxlength="16">
+              </div>
+              <button id="verifyOTP" type="submit" class="btn btn-primary"> Change Password
+              </button>
+            </form>
           </div>
-          <!--/row end-->
-
         </div>
+        <!--/row end-->
 
       </div>
-      <!--/row-->
 
-      <div style="clear:both"></div>
     </div>
-    <!-- /wrapper -->
+    <!--/row-->
 
-    <div class="gap"></div>
+    <div style="clear:both"></div>
+  </div>
+  <!-- /wrapper -->
+
+  <div class="gap"></div>
 
 
-    <!-- Le javascript
+  <!-- Le javascript
 ================================================== -->
 
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/jquery/jquery-2.1.3.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <!-- include  parallax plugin -->
-    <script type="text/javascript" src="assets/js/jquery.parallax-1.1.js"></script>
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="assets/js/jquery/jquery-2.1.3.min.js"></script>
+  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <!-- include  parallax plugin -->
+  <script type="text/javascript" src="assets/js/jquery.parallax-1.1.js"></script>
 
-    <!-- optionally include helper plugins -->
-    <script type="text/javascript" src="assets/js/helper-plugins/jquery.mousewheel.min.js"></script>
+  <!-- optionally include helper plugins -->
+  <script type="text/javascript" src="assets/js/helper-plugins/jquery.mousewheel.min.js"></script>
 
-    <!-- include mCustomScrollbar plugin //Custom Scrollbar  -->
+  <!-- include mCustomScrollbar plugin //Custom Scrollbar  -->
 
-    <script type="text/javascript" src="assets/js/jquery.mCustomScrollbar.js"></script>
+  <script type="text/javascript" src="assets/js/jquery.mCustomScrollbar.js"></script>
 
-    <!-- include icheck plugin // customized checkboxes and radio buttons   -->
-    <script type="text/javascript" src="assets/plugins/icheck-1.x/icheck.min.js"></script>
+  <!-- include icheck plugin // customized checkboxes and radio buttons   -->
+  <script type="text/javascript" src="assets/plugins/icheck-1.x/icheck.min.js"></script>
 
-    <!-- include grid.js // for equal Div height  -->
-    <script src="assets/plugins/jquery-match-height-master/dist/jquery.matchHeight-min.js"></script>
-    <script src="assets/js/grids.js"></script>
+  <!-- include grid.js // for equal Div height  -->
+  <script src="assets/plugins/jquery-match-height-master/dist/jquery.matchHeight-min.js"></script>
+  <script src="assets/js/grids.js"></script>
 
-    <!-- include carousel slider plugin  -->
-    <script src="assets/js/owl.carousel.min.js"></script>
+  <!-- include carousel slider plugin  -->
+  <script src="assets/js/owl.carousel.min.js"></script>
 
-    <!-- jQuery select2 // custom select   -->
-    <script src="../../../../cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
+  <!-- jQuery select2 // custom select   -->
+  <script src="../../../../cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
 
-    <!-- include touchspin.js // touch friendly input spinner component   -->
-    <script src="assets/js/bootstrap.touchspin.js"></script>
+  <!-- include touchspin.js // touch friendly input spinner component   -->
+  <script src="assets/js/bootstrap.touchspin.js"></script>
 
-    <!-- include validate.js // jquery plugin   -->
-    <script src="assets/js/jquery.validate.js"></script>
+  <!-- include validate.js // jquery plugin   -->
+  <script src="assets/js/jquery.validate.js"></script>
 
-    {{!-- swal script --}}
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-
-    <script>
-      $().ready(function () {
-        // validate the comment form when it is submitted
-        $("#passwordChangeForm").validate();
-      });
-    </script>
-
-  
+  {{!-- swal script --}}
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
-    <script>
-      async function changePassword() {
-        try {
-          if ($("#passwordChangeForm").valid()) {
-            let formData = new FormData(passwordChangeForm)
-            const response = await fetch('/account/changePassword', { method: 'PATCH', body: formData })
-            let data = await response.json()
-            if (data.success) {
-              Swal.fire({
-                icon: "success",
-                title: "Your new password has been successfully changed",
-                showConfirmButton: false,
-                timer: 5000
-              }).then( ()=>window.location.href='/account' )
-            }
+  <script>
+    $().ready(function () {
+      // validate the comment form when it is submitted
+      $("#passwordChangeForm").validate();
+    });
+  </script>
+
+
+
+
+  <script>
+    async function changePassword() {
+      try {
+        if ($("#passwordChangeForm").valid()) {
+
+          const confirmPass = document.getElementById('confirmPass').value
+          const currentPassword = document.getElementById('currentPassword').value
+
+          /* let formData = new FormData(passwordChangeForm) */
+          const formData = { confirmPass, currentPassword }
+          console.log(formData)
+
+
+          const response = await fetch('/account/changePassword', {
+            method: 'PATCH',
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(formData)
+          })
+          let data = await response.json()
+          if (data.success) {
+            Swal.fire({
+              icon: "success",
+              title: "Your new password has been successfully changed",
+              showConfirmButton: false,
+              timer: 5000
+            }).then(() => window.location.href = '/account')
           }
-        } catch (error) {
-          console.error(error)
         }
+      } catch (error) {
+        console.error(error)
       }
-      
-      passwordChangeForm.addEventListener('submit', function (e) {
-        e.preventDefault()
-        changePassword.call(this)
-      })
-    </script>
+    }
+
+    passwordChangeForm.addEventListener('submit', function (e) {
+      e.preventDefault()
+      changePassword.call(this)
+    })
+  </script>
 
 
-    <!-- include custom script for site  -->
-    <script src="assets/js/script.js"></script>
-</body>
+  <!-- include custom script for site  -->
+  <script src="assets/js/script.js"></script>
+  </body>
 
-<!-- Mirrored from templatecycle.com/tshop/v6/gray/account-1.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 09 Dec 2023 06:52:06 GMT -->
+  <!-- Mirrored from templatecycle.com/tshop/v6/gray/account-1.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 09 Dec 2023 06:52:06 GMT -->
 
-</html>
+  </html>
